--- a/views/admin/booking/show_table_detail_booking.ejs
+++ b/views/admin/booking/show_table_detail_booking.ejs
@@ -6,7 +6,7 @@
     <div class="card-body">
         <div class="row">
             <div class="col-md-4">
-                <img src="https://backend-staycation.vercel.app/<%= booking.payments.proofPayment %>" alt="image" style="width: 100%; display: block" />
+                <img src="https://web-production-afb3.up.railway.app/<%= booking.payments.proofPayment %>" alt="image" style="width: 100%; display: block" />
 
                 <div class="row ml-1">
                     <% if(booking.payments.status == 'Proses') {%>
